# trie

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TrieConfig.cmake
include/: trie.h
include/trie/: trie.h
src/: trie.c
test/: trie.c
